// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inside transformer applyMacros() should work 1`] = `
Object {
  "applied": false,
  "recollectMacros": false,
}
`;

exports[`inside transformer applyMacros() should work 2`] = `
Object {
  "applied": true,
  "recollectMacros": false,
}
`;

exports[`inside transformer collectImportedMacros() should rewrite import stmts if keep=true 1`] = `"import '@a';"`;

exports[`inside transformer collectImportedMacros() should rewrite import stmts if keep=true 2`] = `"import '@a';"`;

exports[`inside transformer collectImportedMacros() should rewrite import stmts if keep=true 3`] = `"import '@a';"`;

exports[`inside transformer collectImportedMacros() should rewrite import stmts if keep=true 4`] = `"import '@a';"`;

exports[`inside transformer collectImportedMacros() should work 1`] = `
Array [
  Object {
    "importedAsNamespace": false,
    "local": "a",
    "macro": Object {
      "name": "a",
    },
    "namespace": "@a",
  },
]
`;

exports[`inside transformer collectImportedMacros() should work 2`] = `
Array [
  Object {
    "importedAsNamespace": false,
    "local": "_a",
    "macro": Object {
      "name": "a",
    },
    "namespace": "@a",
  },
]
`;

exports[`inside transformer collectImportedMacros() should work 3`] = `
Array [
  Object {
    "importedAsNamespace": true,
    "local": "a",
    "macros": Array [
      Object {
        "name": "a",
      },
    ],
    "namespace": "@a",
  },
]
`;

exports[`inside transformer collectImportedMacros() should work 4`] = `
Array [
  Object {
    "importedAsNamespace": true,
    "local": "a",
    "macros": Array [
      Object {
        "name": "a",
      },
    ],
    "namespace": "@a",
  },
]
`;

exports[`inside transformer findCalledMacro() should work 1`] = `
Object {
  "name": "a",
}
`;

exports[`inside transformer findCalledMacro() should work 2`] = `undefined`;

exports[`inside transformer findCalledMacro() should work 3`] = `
Object {
  "name": "a",
}
`;

exports[`inside transformer findCalledMacro() should work 4`] = `undefined`;

exports[`inside transformer findCalledMacro() should work 5`] = `undefined`;

exports[`inside transformer findCalledMacro() should work 6`] = `
Object {
  "name": "a",
}
`;

exports[`inside transformer findCalledMacro() should work 7`] = `
Object {
  "name": "a",
}
`;

exports[`inside transformer findCalledMacro() should work 8`] = `"a"`;

exports[`transformer should support recollect imported macros 1`] = `"console.log('hello world');"`;

exports[`transformer should work 1`] = `"console.log(\\"yeah yeah yeah\\");"`;
